# cpp-httplib

./: .gitignore  package-lock.json  package.json  plugin_comparison_report.md  plugin_requirements.md  plugin_research_notes.md
robot_plugin_framework/: CMakeLists.txt  README.md  README_CN.md  USAGE.md  development_notes.md  fix_plan.md  test_requirements.md  test_results.md
robot_plugin_framework/examples/: CMakeLists.txt
robot_plugin_framework/examples/debug_server/: CMakeLists.txt  debug_api.cpp  debug_api.h  main.cpp
robot_plugin_framework/examples/debug_server/web/: index.html
robot_plugin_framework/examples/host_app/: CMakeLists.txt  main.cpp
robot_plugin_framework/examples/motion_control_plugin/: CMakeLists.txt  motion_control_plugin.cpp  motion_control_plugin.meta.json
robot_plugin_framework/examples/mujoco_hardware_plugin/: CMakeLists.txt  mujoco_hardware_plugin.cpp  mujoco_hardware_plugin.meta.json
robot_plugin_framework/examples/vision_plugin/: CMakeLists.txt  vision_plugin.cpp  vision_plugin.meta.json
robot_plugin_framework/include/rpf/: dependency_resolver.h  event_bus.h  hardware_interface.h  motion_controller.h  plugin_interface.h  plugin_manager.h  plugin_metadata.h  service_registry.h  version.h  vision_detector.h
robot_plugin_framework/src/: dependency_resolver.cpp  event_bus.cpp  plugin_manager.cpp  service_registry.cpp
robot_plugin_framework/tests/: CMakeLists.txt  test_comprehensive.cpp  test_dependency_resolver.cpp  test_event_bus.cpp  test_metadata.cpp  test_plugin_manager.cpp
stress_test/: Makefile  STRESS_TEST_REPORT.md  mock_robot_server  mock_robot_server.cc  stability_test  stability_test.cc  stress_test  stress_test.cc
